--- a/GameSDL.cbp
+++ b/GameSDL.cbp
@@ -38,6 +38,8 @@
 		<Unit filename="BulletObject.h" />
 		<Unit filename="CommonFunction.cpp" />
 		<Unit filename="CommonFunction.h" />
+		<Unit filename="ThreatsObject.cpp" />
+		<Unit filename="ThreatsObject.h" />
 		<Unit filename="game_map.cpp" />
 		<Unit filename="game_map.h" />
 		<Unit filename="graphics.cpp" />
